lab2 almost done

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,17 +13,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9e21a8ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>1800</th>\n",
+       "      <th>1801</th>\n",
+       "      <th>1802</th>\n",
+       "      <th>1803</th>\n",
+       "      <th>1804</th>\n",
+       "      <th>1805</th>\n",
+       "      <th>1806</th>\n",
+       "      <th>1807</th>\n",
+       "      <th>1808</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2091</th>\n",
+       "      <th>2092</th>\n",
+       "      <th>2093</th>\n",
+       "      <th>2094</th>\n",
+       "      <th>2095</th>\n",
+       "      <th>2096</th>\n",
+       "      <th>2097</th>\n",
+       "      <th>2098</th>\n",
+       "      <th>2099</th>\n",
+       "      <th>2100</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>3.28M</td>\n",
+       "      <td>3.28M</td>\n",
+       "      <td>3.28M</td>\n",
+       "      <td>3.28M</td>\n",
+       "      <td>3.28M</td>\n",
+       "      <td>3.28M</td>\n",
+       "      <td>3.28M</td>\n",
+       "      <td>3.28M</td>\n",
+       "      <td>3.28M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>108M</td>\n",
+       "      <td>108M</td>\n",
+       "      <td>109M</td>\n",
+       "      <td>109M</td>\n",
+       "      <td>109M</td>\n",
+       "      <td>110M</td>\n",
+       "      <td>110M</td>\n",
+       "      <td>110M</td>\n",
+       "      <td>111M</td>\n",
+       "      <td>111M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>1.57M</td>\n",
+       "      <td>1.57M</td>\n",
+       "      <td>1.57M</td>\n",
+       "      <td>1.57M</td>\n",
+       "      <td>1.57M</td>\n",
+       "      <td>1.57M</td>\n",
+       "      <td>1.57M</td>\n",
+       "      <td>1.57M</td>\n",
+       "      <td>1.57M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>125M</td>\n",
+       "      <td>126M</td>\n",
+       "      <td>127M</td>\n",
+       "      <td>128M</td>\n",
+       "      <td>129M</td>\n",
+       "      <td>130M</td>\n",
+       "      <td>131M</td>\n",
+       "      <td>131M</td>\n",
+       "      <td>132M</td>\n",
+       "      <td>133M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>400k</td>\n",
+       "      <td>402k</td>\n",
+       "      <td>404k</td>\n",
+       "      <td>405k</td>\n",
+       "      <td>407k</td>\n",
+       "      <td>409k</td>\n",
+       "      <td>411k</td>\n",
+       "      <td>413k</td>\n",
+       "      <td>414k</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.35M</td>\n",
+       "      <td>1.32M</td>\n",
+       "      <td>1.29M</td>\n",
+       "      <td>1.26M</td>\n",
+       "      <td>1.23M</td>\n",
+       "      <td>1.21M</td>\n",
+       "      <td>1.18M</td>\n",
+       "      <td>1.15M</td>\n",
+       "      <td>1.12M</td>\n",
+       "      <td>1.1M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>2650</td>\n",
+       "      <td>...</td>\n",
+       "      <td>62.5k</td>\n",
+       "      <td>62.2k</td>\n",
+       "      <td>61.9k</td>\n",
+       "      <td>61.7k</td>\n",
+       "      <td>61.4k</td>\n",
+       "      <td>61.2k</td>\n",
+       "      <td>60.9k</td>\n",
+       "      <td>60.7k</td>\n",
+       "      <td>60.5k</td>\n",
+       "      <td>60.2k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>UAE</td>\n",
+       "      <td>40.2k</td>\n",
+       "      <td>40.2k</td>\n",
+       "      <td>40.2k</td>\n",
+       "      <td>40.2k</td>\n",
+       "      <td>40.2k</td>\n",
+       "      <td>40.2k</td>\n",
+       "      <td>40.2k</td>\n",
+       "      <td>40.2k</td>\n",
+       "      <td>40.2k</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.5M</td>\n",
+       "      <td>13.5M</td>\n",
+       "      <td>13.6M</td>\n",
+       "      <td>13.7M</td>\n",
+       "      <td>13.8M</td>\n",
+       "      <td>13.8M</td>\n",
+       "      <td>13.9M</td>\n",
+       "      <td>14M</td>\n",
+       "      <td>14M</td>\n",
+       "      <td>14.1M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 302 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country   1800   1801   1802   1803   1804   1805   1806   1807   1808  \\\n",
+       "0  Afghanistan  3.28M  3.28M  3.28M  3.28M  3.28M  3.28M  3.28M  3.28M  3.28M   \n",
+       "1       Angola  1.57M  1.57M  1.57M  1.57M  1.57M  1.57M  1.57M  1.57M  1.57M   \n",
+       "2      Albania   400k   402k   404k   405k   407k   409k   411k   413k   414k   \n",
+       "3      Andorra   2650   2650   2650   2650   2650   2650   2650   2650   2650   \n",
+       "4          UAE  40.2k  40.2k  40.2k  40.2k  40.2k  40.2k  40.2k  40.2k  40.2k   \n",
+       "\n",
+       "   ...   2091   2092   2093   2094   2095   2096   2097   2098   2099   2100  \n",
+       "0  ...   108M   108M   109M   109M   109M   110M   110M   110M   111M   111M  \n",
+       "1  ...   125M   126M   127M   128M   129M   130M   131M   131M   132M   133M  \n",
+       "2  ...  1.35M  1.32M  1.29M  1.26M  1.23M  1.21M  1.18M  1.15M  1.12M   1.1M  \n",
+       "3  ...  62.5k  62.2k  61.9k  61.7k  61.4k  61.2k  60.9k  60.7k  60.5k  60.2k  \n",
+       "4  ...  13.5M  13.5M  13.6M  13.7M  13.8M  13.8M  13.9M    14M    14M  14.1M  \n",
+       "\n",
+       "[5 rows x 302 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pop = pd.read_csv('pop.csv')"
+    "pop = pd.read_csv('pop.csv')\n",
+    "pop.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1c607e54",
    "metadata": {},
    "outputs": [
@@ -142,7 +336,7 @@
        "[59297 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
