--- a/Lab3 - Singing A Song.ipynb
+++ b/Lab3 - Singing A Song.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "1c2316ce",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "97c202b8",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "11   12      twelfth    drummer    drumming       NaN             NaN"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "f261591f",
    "metadata": {},
    "outputs": [],
@@ -233,17 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "c540e11b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'doves'"
+       "'geese'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,35 +254,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "2fff8a38",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "partridges\n",
-      "doves\n",
-      "hens\n",
-      "birds\n",
-      "rings\n",
-      "geese\n",
-      "swans\n",
-      "maids\n",
-      "ladies\n",
-      "lords\n",
-      "pipers\n",
-      "drummers\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['partridges',\n",
+       " 'doves',\n",
+       " 'hens',\n",
+       " 'birds',\n",
+       " 'rings',\n",
+       " 'geese',\n",
+       " 'swans',\n",
+       " 'maids',\n",
+       " 'ladies',\n",
+       " 'lords',\n",
+       " 'pipers',\n",
+       " 'drummers']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Will work if your function is vectorized!\n",
-    "i = 0\n",
-    "while i < len(xmas['Gift.Item']):\n",
-    "    print(pluralize_gift(xmas['Gift.Item'][i]))\n",
-    "    i = i + 1\n",
+    "gifts = map(pluralize_gift, xmas['Gift.Item'])\n",
+    "list(gifts)\n",
     "    "
    ]
   },
@@ -307,38 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "bab9b39f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'p'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8a3a5dc5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_phrase(num, num_word, item, verb, adjective, location):\n",
-    "  \"\"\"\n",
-    "  <documentation here>\n",
-    "  \"\"\"\n",
-    "  \n",
+    "\n",
+    "\n",
     "  ## Step 1: Replace NAs with blank strings\n",
-    "  verb = verb.fillna(\"\")\n",
-    "  adjective = adjective.fillna(\"\")\n",
+    "    verb = verb.replace(\"NaN\", \"\")\n",
+    "    adjective = adjective.replace(\"NaN\", \"\")\n",
     "  \n",
     "  ## Step 2: If the day number is larger than 1, the gift items need pluralized!\n",
     "  ### Hint: call the function you created above!\n",
@@ -350,20 +330,43 @@
     "  \n",
     "  \n",
     "  ## Step 3: Figure out if a gift item starts with a vowel\n",
-    "    \n",
+    "    vowel_list = ['a','e','i','o','u']\n",
     "  \n",
     "  ## Step 4: For the first day, if the gift item starts with a vowel, replace the day with \"an\" and if the gift item does not start with a vowel, replace the day with \"a\" (e.g. a partridge in a pear tree). If it is not the first day, use just the number word (e.g. ten lords a leap)\n",
-    "  \n",
-    "  ## Step 5: Put all of the pieces together into one string and return!"
+    "    if (num == 1) & (item[0] in vowel_list):\n",
+    "        num_word = num_word.replace(num_word, \"an\")\n",
+    "    elif (num == 1) & (item[0] not in vowel_list):\n",
+    "         num_word = num_word.replace(num_word, \"a\")\n",
+    "    else:\n",
+    "        num_word = num_word\n",
+    "        \n",
+    "  ## Step 5: Put all of the pieces together into one string and return!\n",
+    "    str_list = [num_word, adjective, item, verb, location]\n",
+    "    return \" \".join(filter(None, str_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "174f683a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a partridge in a pear tree'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_phrase(num = 1, num_word = \"one\", item = \"partridge\", verb = 'NaN', adjective = 'NaN', location = \"in a pear tree\")"
+   ]
   },
   {
    "cell_type": "code",
