--- a/Lab3 - Singing A Song.ipynb
+++ b/Lab3 - Singing A Song.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "438261d4",
+   "id": "9d3805fe",
    "metadata": {},
    "source": [
     "---\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "id": "1c2316ce",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
+   "id": "51f4a195",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"foot\".find(\"oo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "f261591f",
    "metadata": {},
    "outputs": [],
@@ -62,12 +83,10 @@
     "      str\n",
     "        Plural version\n",
     "    \"\"\"\n",
-    "\n",
-    "        \n",
-    "    if gift == \"goose\":\n",
-    "        gift = gift.replace(\"goose\", \"geese\")\n",
-    "    elif gift == \"lady\": \n",
-    "        gift = gift.replace(\"lady\",'ladies')\n",
+    "    if gift[-1] == \"y\": \n",
+    "        gift = gift.replace(\"y\",'ies')\n",
+    "    elif gift.find(\"oo\") == 1:\n",
+    "        gift = gift.replace(\"oo\", \"ee\")\n",
     "    else:\n",
     "        gift = gift + \"s\"\n",
     "\n",
@@ -76,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "id": "c540e11b",
    "metadata": {},
    "outputs": [
@@ -86,7 +105,7 @@
        "'geese'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "id": "2fff8a38",
    "metadata": {},
    "outputs": [
@@ -118,13 +137,14 @@
        " 'drummers']"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Will work if your function is vectorized!\n",
+    "#Function is not vectorized, so we need to map it\n",
     "gifts = map(pluralize_gift, xmas['Gift.Item'])\n",
     "list(gifts)\n",
     "    "
@@ -151,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "id": "8a3a5dc5",
    "metadata": {},
    "outputs": [],
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "id": "174f683a",
    "metadata": {
     "scrolled": false
@@ -226,7 +246,7 @@
        "'a partridge in a pear tree'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "id": "fc0873f8",
    "metadata": {},
    "outputs": [
@@ -247,7 +267,7 @@
        "'twelfth drummers drumming'"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "id": "63eeb41f",
    "metadata": {},
    "outputs": [],
@@ -268,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "id": "ed809f5f",
    "metadata": {},
    "outputs": [
@@ -443,7 +463,7 @@
        "11   12      twelfth    drummer    drumming       NaN             NaN   twelve"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "id": "980877f7",
    "metadata": {},
    "outputs": [
@@ -465,7 +485,7 @@
        "'twelve drummers drumming'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "id": "5abfa09a",
    "metadata": {},
    "outputs": [],
@@ -486,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "id": "aad34710",
    "metadata": {},
    "outputs": [
@@ -688,7 +708,7 @@
        "11   twelve    twelve drummers drumming  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "id": "27043782",
    "metadata": {},
    "outputs": [],
@@ -775,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "id": "68f2b4f7",
    "metadata": {
     "scrolled": true
@@ -799,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 23,
    "id": "cce60c69",
    "metadata": {},
    "outputs": [
@@ -920,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 24,
    "id": "e414b843",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1102,7 @@
        "11   12      twelfth      hour     sleeping       NaN            NaN"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,8 +1114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "ab34cf11",
+   "execution_count": 25,
+   "id": "97a9f80c",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1175,7 @@
       "and an email from Cal Poly.\n",
       "\n",
       "On the ninth day of Christmas, my true love sent to me:\n",
-      "nine partys bumping,\n",
+      "nine parties bumping,\n",
       "eight moms a-calling,\n",
       "seven seniors stressing,\n",
       "six graders grading,\n",
@@ -1167,7 +1187,7 @@
       "\n",
       "On the tenth day of Christmas, my true love sent to me:\n",
       "ten loads of laundry,\n",
-      "nine partys bumping,\n",
+      "nine parties bumping,\n",
       "eight moms a-calling,\n",
       "seven seniors stressing,\n",
       "six graders grading,\n",
@@ -1180,7 +1200,7 @@
       "On the eleventh day of Christmas, my true love sent to me:\n",
       "eleven friends goodbye-ing,\n",
       "ten loads of laundry,\n",
-      "nine partys bumping,\n",
+      "nine parties bumping,\n",
       "eight moms a-calling,\n",
       "seven seniors stressing,\n",
       "six graders grading,\n",
@@ -1194,7 +1214,7 @@
       "twelve hours sleeping,\n",
       "eleven friends goodbye-ing,\n",
       "ten loads of laundry,\n",
-      "nine partys bumping,\n",
+      "nine parties bumping,\n",
       "eight moms a-calling,\n",
       "seven seniors stressing,\n",
       "six graders grading,\n",
@@ -1215,6 +1235,221 @@
     "\n",
     "song = list(map(lambda x: sing_day(xmas2, x, 'Full.Phrase'), xmas2['Day']))\n",
     "print(song)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6756a460",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Day.in.Words</th>\n",
+       "      <th>Gift.Item</th>\n",
+       "      <th>Verb</th>\n",
+       "      <th>Adjective</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>num_word</th>\n",
+       "      <th>Full.Phrase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>first</td>\n",
+       "      <td>partridge</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>in a pear tree</td>\n",
+       "      <td>one</td>\n",
+       "      <td>a partridge in a pear tree</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>second</td>\n",
+       "      <td>dove</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>turtle</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>two</td>\n",
+       "      <td>two turtle doves</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>third</td>\n",
+       "      <td>hen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>french</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>three</td>\n",
+       "      <td>three french hens</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>fourth</td>\n",
+       "      <td>bird</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>calling</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>four</td>\n",
+       "      <td>four calling birds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>fifth</td>\n",
+       "      <td>ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>golden</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>five</td>\n",
+       "      <td>five golden rings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>sixth</td>\n",
+       "      <td>goose</td>\n",
+       "      <td>a-laying</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>six</td>\n",
+       "      <td>six geese a-laying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>seventh</td>\n",
+       "      <td>swan</td>\n",
+       "      <td>a-swimming</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>seven</td>\n",
+       "      <td>seven swans a-swimming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>eighth</td>\n",
+       "      <td>maid</td>\n",
+       "      <td>a-milking</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>eight</td>\n",
+       "      <td>eight maids a-milking</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>ninth</td>\n",
+       "      <td>lady</td>\n",
+       "      <td>dancing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>nine</td>\n",
+       "      <td>nine ladies dancing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>tenth</td>\n",
+       "      <td>lord</td>\n",
+       "      <td>a-leaping</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ten</td>\n",
+       "      <td>ten lords a-leaping</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>eleventh</td>\n",
+       "      <td>piper</td>\n",
+       "      <td>piping</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>eleven</td>\n",
+       "      <td>eleven pipers piping</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>twelfth</td>\n",
+       "      <td>drummer</td>\n",
+       "      <td>drumming</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>twelve</td>\n",
+       "      <td>twelve drummers drumming</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Day Day.in.Words  Gift.Item        Verb Adjective        Location  \\\n",
+       "0     1        first  partridge         NaN       NaN  in a pear tree   \n",
+       "1     2       second       dove         NaN    turtle             NaN   \n",
+       "2     3        third        hen         NaN    french             NaN   \n",
+       "3     4       fourth       bird         NaN   calling             NaN   \n",
+       "4     5        fifth       ring         NaN    golden             NaN   \n",
+       "5     6        sixth      goose    a-laying       NaN             NaN   \n",
+       "6     7      seventh       swan  a-swimming       NaN             NaN   \n",
+       "7     8       eighth       maid   a-milking       NaN             NaN   \n",
+       "8     9        ninth       lady     dancing       NaN             NaN   \n",
+       "9    10        tenth       lord   a-leaping       NaN             NaN   \n",
+       "10   11     eleventh      piper      piping       NaN             NaN   \n",
+       "11   12      twelfth    drummer    drumming       NaN             NaN   \n",
+       "\n",
+       "   num_word                 Full.Phrase  \n",
+       "0       one  a partridge in a pear tree  \n",
+       "1       two            two turtle doves  \n",
+       "2     three           three french hens  \n",
+       "3      four          four calling birds  \n",
+       "4      five           five golden rings  \n",
+       "5       six          six geese a-laying  \n",
+       "6     seven      seven swans a-swimming  \n",
+       "7     eight       eight maids a-milking  \n",
+       "8      nine         nine ladies dancing  \n",
+       "9       ten         ten lords a-leaping  \n",
+       "10   eleven        eleven pipers piping  \n",
+       "11   twelve    twelve drummers drumming  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xmas"
    ]
   }
  ],
