--- a/Practice Activity Polynomial regression, Jake Lamb.ipynb
+++ b/Practice Activity Polynomial regression, Jake Lamb.ipynb
@@ -888,7 +888,7 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "import numpy as np\n",
     "lr = LinearRegression()\n",
-    "ct = ColumnTransformer([('square', PolynomialFeatures(degree=2, include_bias=False), ['bill_length_mm'])])\n",
+    "ct = ColumnTransformer([('squared', PolynomialFeatures(degree=2, include_bias=False), ['bill_length_mm'])])\n",
     "my_pipeline = Pipeline(\n",
     "    [('squared', ct), ('OLS', lr)]\n",
     ")"
